--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
   <!-- Navigation bar for the website (tabs) -->
   <nav class="TabButtons">
    <a href="#aboutme">About Me</a>
-   <a href="#photos">Photos</a>
    <a href="#resume">Resume</a>
    <a href="#projects">Projects</a>
    <a href="#contact">Contact</a>
   </nav>
   <section id="aboutme">
     <h3>About me</h3>
-
     <h4>Skills:</h4>
+
     <div class="ContentBoxes">
     <ul>
     <li>Customer Service Sales</li>
@@ -38,7 +37,29 @@
     <li>Sales</li>
     </ul>
     </div>
-  </section><br>
+  </section>
+  <br>
+
+  <section id="resume">
+    <h3>Resume</h3>
+    <h4>Highlights</h4>
+    
+    <div class=""ContentBoxes>
+      <ul>
+        <li>AI Integtation</li>
+        <ul>Software Languages
+          <li>JavaScript</li>
+          <li>HTML</li>
+          <li>C#</li>
+          <li>CSS</li>
+          <li>Python</li>
+          <li>JSON</li>
+        </ul>
+        
+      </ul>
+    </div>
+
+  </section>
 
   <section id="projects">
     <h3>Projects</h3>
@@ -79,8 +100,8 @@
       <input type="reset" value="Clear">
     </form>
 
-    <br><br>
-
+    <br>
+    <br>
     <!-- Phone number contact -->
     <p>Phone Number: (207)227-7880</p>
   </section>
