--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <h4>Skills:</h4>
 
     <div class="ContentBoxes">
-    <ul>
-    <li>Customer Service Sales</li>
-    <li>Problem Solving</li>
-    <li>Conflict Resolution</li>
-    <li>Sales</li>
-    </ul>
+      <ul>
+        <li>Customer Service Sales</li>
+        <li>Problem Solving</li>
+        <li>Conflict Resolution</li>
+        <li>Sales</li>
+      </ul>
     </div>
   </section>
   <br>
@@ -44,7 +44,7 @@
     <h3>Resume</h3>
     <h4>Highlights</h4>
     
-    <div class=""ContentBoxes>
+    <div class="ContentBoxes">
       <ul>
         <li>AI Integtation</li>
         <ul>Software Languages
