--- a/index.html
+++ b/index.html
@@ -46,16 +46,17 @@
     
     <div class="ContentBoxes">
       <ul>
-        <li>AI Integtation</li>
-        <ul>Software Languages
+        <li>AI Integration</li>
+        <li>Software Languages
+          <ul>
           <li>JavaScript</li>
           <li>HTML</li>
           <li>C#</li>
           <li>CSS</li>
           <li>Python</li>
           <li>JSON</li>
-        </ul>
-        
+          </ul>
+        </li>
       </ul>
     </div>
 
@@ -99,11 +100,6 @@
       <input type="submit" value="Send">
       <input type="reset" value="Clear">
     </form>
-
-    <br>
-    <br>
-    <!-- Phone number contact -->
-    <p>Phone Number: (207)227-7880</p>
   </section>
 </body>
 </html>
