--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
    <a href="#projects">Projects</a>
    <a href="#contact">Contact</a>
   </nav>
+  <br>
+  <!--About Me Section-->
   <section id="aboutme">
     <h3>About me</h3>
     <h4>Skills:</h4>
@@ -39,29 +41,54 @@
     </div>
   </section>
   <br>
-
+  <!--Resume Section-->
   <section id="resume">
     <h3>Resume</h3>
     <h4>Highlights</h4>
-    
+  
     <div class="ContentBoxes">
+      <h5>Technical Skills</h5>
       <ul>
         <li>AI Integration</li>
         <li>Software Languages
           <ul>
-          <li>JavaScript</li>
-          <li>HTML</li>
-          <li>C#</li>
-          <li>CSS</li>
-          <li>Python</li>
-          <li>JSON</li>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>C#</li>
+            <li>CSS</li>
+            <li>Python</li>
+            <li>JSON</li>
           </ul>
         </li>
+        <li>3D Modeling & Printing</li>
+        <li>Game Development (Unity)</li>
+        <li>Version Control (GitHub)</li>
       </ul>
+  
+      <h5>Soft Skills</h5>
+      <ul>
+        <li>Problem Solving</li>
+        <li>Strategic Thinking</li>
+        <li>Creative Writing</li>
+        <li>Task Delegation</li>
+        <li>Adaptability</li>
+      </ul>
+  
+      <h5>Social/Professional Skills</h5>
+      <ul>
+        <li>Customer Service</li>
+        <li>Conflict Resolution</li>
+        <li>Team Collaboration</li>
+        <li>Mentoring</li>
+        <li>Live Streaming & Online Engagement</li>
+      </ul>
+      <a href="Saryn Harris Resume 4-16-2025.pdf" download>
+        <span class="DownloadButton">Download My Full Resume</span>
+      </a>      
     </div>
-
   </section>
-
+  <br>
+  <!--Projects Section-->
   <section id="projects">
     <h3>Projects</h3>
     <div class="ContentBoxes">
