--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <li>Mentoring</li>
         <li>Live Streaming & Online Engagement</li>
       </ul>
-      <a href="Saryn Harris Resume 4-16-2025.pdf" download>
-        <span class="DownloadButton">Download My Full Resume</span>
+      <a href="Saryn Harris Resume 4-16-2025.pdf" download class="DownloadLink">
+        <button class="DownloadButtons">Download My Full Resume</button>
       </a>      
     </div>
   </section>
