--- a/index.html
+++ b/index.html
@@ -46,59 +46,65 @@
     <h3>Resume</h3>
     <h4>Highlights</h4>
   
-    <div class="ContentBoxes">
-      <h5>Technical Skills</h5>
-      <ul>
-        <li>AI Integration</li>
-        <li>Software Languages
-          <ul>
-            <li>JavaScript</li>
-            <li>HTML</li>
-            <li>C#</li>
-            <li>CSS</li>
-            <li>Python</li>
-            <li>JSON</li>
-          </ul>
-        </li>
-        <li>3D Modeling & Printing</li>
-        <li>Game Development (Unity)</li>
-        <li>Version Control (GitHub)</li>
-      </ul>
-  
-      <h5>Soft Skills</h5>
-      <ul>
-        <li>Problem Solving</li>
-        <li>Strategic Thinking</li>
-        <li>Creative Writing</li>
-        <li>Task Delegation</li>
-        <li>Adaptability</li>
-      </ul>
-  
-      <h5>Social/Professional Skills</h5>
-      <ul>
-        <li>Customer Service</li>
-        <li>Conflict Resolution</li>
-        <li>Team Collaboration</li>
-        <li>Mentoring</li>
-        <li>Live Streaming & Online Engagement</li>
-      </ul>
-      <a href="Saryn Harris Resume 4-16-2025.pdf" download class="DownloadLink">
+    
+    <h5 class="AccessText">Technical Skills</h5>
+      <div class="ContentBoxes">
+        <ul>
+          <li>AI Integration</li>
+          <li>Software Languages
+            <ul>
+              <li>JavaScript</li>
+              <li>HTML</li>
+              <li>C#</li>
+              <li>CSS</li>
+              <li>Python</li>
+              <li>JSON</li>
+            </ul>
+          </li>
+          <li>3D Modeling & Printing</li>
+          <li>Game Development (Unity)</li>
+          <li>Version Control (GitHub)</li>
+       </ul>
+      </div class="ContentBoxes">
+    <h5 class="AccessText">Soft Skills</h5>
+      <div>
+        <ul>
+          <li>Problem Solving</li>
+          <li>Strategic Thinking</li>
+          <li>Creative Writing</li>
+          <li>Task Delegation</li>
+          <li>Adaptability</li>
+        </ul>
+      </div>
+    <h5 class="AccessText">Social/Professional Skills</h5>
+      <div class="ContentBoxes">
+        <ul>
+          <li>Customer Service</li>
+          <li>Conflict Resolution</li>
+          <li>Team Collaboration</li>
+          <li>Mentoring</li>
+          <li>Live Streaming & Online Engagement</li>
+        </ul>
+        <a href="Saryn Harris Resume 4-16-2025.pdf" download class="DownloadLink">
         <button class="DownloadButtons">Download My Full Resume</button>
-      </a>      
-    </div>
+        </a>      
+      </div>
   </section>
   <br>
   <!--Projects Section-->
   <section id="projects">
     <h3>Projects</h3>
     <div class="ContentBoxes">
-      <p> Here's a brief description of some of the things I am working on! Link's to each project are embeded.</p>
-      <p>Test Project: Brief Description</p>
-      <div class=CollageImages>
-      Images here:
+      <p>Here's a brief description of some of the things I am working on! Links to each project are embedded.</p>
+      <p><strong>Long War:</strong> A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
+      <div class="CollageImages">
+        <img src="Assets/Long War/LongWarScreenshot0.png" alt="Screenshot from Long War project">
+        <img src="Assets/Long War/LongWarScreenshot1.png" alt="Screenshot from Long War project">
+        <img src="Assets/Long War/LongWarScreenshot2.png" alt="Screenshot from Long War project">
       </div>
     </div>
   </section>
+  
 
   <!-- Main content area for contact information -->
   <section id="contact" class="MainText">
