--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="TabButtons">
    <a href="#aboutme">About Me</a>
    <a href="#resume">Resume</a>
-   <a href="#projects">Projects</a>
+   <a href="Projects/index.html">Projects</a>
    <a href="#contact">Contact</a>
   </nav>
   <br>
@@ -97,11 +97,7 @@
     <div class="ContentBoxes">
       <p>Here's a brief description of some of the things I am working on! Links to each project are embedded.</p>
       <p><strong>Long War:</strong> A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
-      <div class="CollageImages">
-        <img src="Assets/Long War/LongWarScreenshot0.png" alt="Screenshot from Long War project">
-        <img src="Assets/Long War/LongWarScreenshot1.png" alt="Screenshot from Long War project">
-        <img src="Assets/Long War/LongWarScreenshot2.png" alt="Screenshot from Long War project">
-      </div>
+      
     </div>
   </section>
   
