--- a/Projects/index.html
+++ b/Projects/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Assets/CSS/style.css">>
 </head>
 <body>
    <!--Projects Section-->
