--- a/Projects/index.html
+++ b/Projects/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="Assets/CSS/style.css">>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
    <!--Projects Section-->
@@ -19,13 +19,12 @@
       <p>Here's a brief description of some of the things I am working on! Links to each project are embedded.</p>
       <p><strong>Long War:</strong> A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
       <div class="CollageImages">
-        <img src="Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
-        <img src="Assets/LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot of Long War project">
-        <img src="Assets/LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot of Long War project">
-        <img src="Assets/LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot of Long War project">
+        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
+        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot of Long War project">
+        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot of Long War project">
+        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot of Long War project">        
       </div>
     </div>
   </section>
-  
 </body>
 </html>
