--- a/Projects/index.html
+++ b/Projects/index.html
@@ -26,5 +26,9 @@
       </div>
     </div>
   </section>
+<nav class="TabButtons">
+        <a href="/index.html">Click Here to Return to the home page</a>
+</nav>
+  
 </body>
 </html>
