--- a/Projects/index.html
+++ b/Projects/index.html
@@ -27,7 +27,7 @@
     </div>
   </section>
 <nav class="TabButtons">
-        <a href="/index.html">Click Here to Return to the home page</a>
+    <button onclick="history.back()">← Go Back</button>
 </nav>
   
 </body>
