--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Assets/CSS/style.css">
 </head>
 <body>
 <!-- Main Header (Portfolio Name) styled with 'AccessText' class -->
@@ -67,7 +67,7 @@
        </ul>
       </div class="ContentBoxes">
     <h5 class="AccessText">Soft Skills</h5>
-      <div>
+      <div class="ContentBoxes">
         <ul>
           <li>Problem Solving</li>
           <li>Strategic Thinking</li>
