--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li>Game Development (Unity)</li>
           <li>Version Control (GitHub)</li>
        </ul>
-      </div class="ContentBoxes">
+      </div>
     <h5 class="AccessText">Soft Skills</h5>
       <div class="ContentBoxes">
         <ul>
