--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
        </ul>
       </div>
     <h5 class="AccessText">Soft Skills</h5>
-      <div class="ContentBoxes">
+      <div>
         <ul>
           <li>Problem Solving</li>
           <li>Strategic Thinking</li>
