--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="AccessText">Saryn Harris Portfolio</h1>
 
   <!-- Subtitle (Role/Profession) styled with 'AccessText' class -->
-  <h2 class="AccessText">Aspirant Tech priestess and software Engineer</h2>
+  <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
 
   <!-- Navigation bar for the website (tabs) -->
   <nav class="TabButtons">
