--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
        </ul>
       </div>
     <h5 class="AccessText">Soft Skills</h5>
-      <div>
-        <ul>
+        <div class="ContentBoxes">
+         <ul>
           <li>Problem Solving</li>
           <li>Strategic Thinking</li>
           <li>Creative Writing</li>
           <li>Task Delegation</li>
           <li>Adaptability</li>
         </ul>
-      </div>
+       </div>
     <h5 class="AccessText">Social/Professional Skills</h5>
       <div class="ContentBoxes">
         <ul>
