--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </ul>
        </div>
     <h5 class="AccessText">Social/Professional Skills</h5>
-      <div class="ContentBoxes">
+      <div> class="ContentBoxes">
         <ul>
           <li>Customer Service</li>
           <li>Conflict Resolution</li>
@@ -85,10 +85,10 @@
           <li>Mentoring</li>
           <li>Live Streaming & Online Engagement</li>
         </ul>
+      </div>
         <a href="Saryn Harris Resume 4-16-2025.pdf" download class="DownloadLink">
         <button class="DownloadButtons">Download My Full Resume</button>
-        </a>      
-      </div>
+        </a>
   </section>
   <br>
 
