--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </ul>
        </div>
     <h5 class="AccessText">Social/Professional Skills</h5>
-      <div> class="ContentBoxes">
+      <div class="ContentBoxes">
         <ul>
           <li>Customer Service</li>
           <li>Conflict Resolution</li>
