--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="Assets/CSS/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <!-- Main Header (Portfolio Name) styled with 'AccessText' class -->
@@ -48,8 +48,7 @@
   
     
     <h5 class="AccessText">Technical Skills</h5>
-      <div class="ContentBoxes">
-        <ul>
+        <ul class="ContentBoxes">
           <li>AI Integration</li>
           <li>Software Languages
             <ul>
@@ -65,17 +64,14 @@
           <li>Game Development (Unity)</li>
           <li>Version Control (GitHub)</li>
        </ul>
-      </div>
     <h5 class="AccessText">Soft Skills</h5>
-        <div class="ContentBoxes">
-         <ul>
+       <ul class="ContentBoxes">
           <li>Problem Solving</li>
           <li>Strategic Thinking</li>
           <li>Creative Writing</li>
           <li>Task Delegation</li>
           <li>Adaptability</li>
-        </ul>
-       </div>
+       </ul>
     <h5 class="AccessText">Social/Professional Skills</h5>
       <div class="ContentBoxes">
         <ul>
