--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   
     
     <h5 class="AccessText">Technical Skills</h5>
-        <ul class="ContentBoxes">
+       <div class="ContentBoxes">
+        <ul>
           <li>AI Integration</li>
           <li>Software Languages
             <ul>
@@ -64,14 +65,17 @@
           <li>Game Development (Unity)</li>
           <li>Version Control (GitHub)</li>
        </ul>
+      </div>
     <h5 class="AccessText">Soft Skills</h5>
-       <ul class="ContentBoxes">
+      <div class="Content boxes">
+       <ul>
           <li>Problem Solving</li>
           <li>Strategic Thinking</li>
           <li>Creative Writing</li>
           <li>Task Delegation</li>
           <li>Adaptability</li>
        </ul>
+      </div>
     <h5 class="AccessText">Social/Professional Skills</h5>
       <div class="ContentBoxes">
         <ul>
