--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h3>Resume</h3>
     <h4>Highlights</h4>
   
-    <div class="Content boxes">
+    <div class="ContentBoxes">
     <h5 class="AccessText">Technical Skills</h5>
         <ul>
           <li>AI Integration</li>
