--- a/Projects/index.html
+++ b/Projects/index.html
@@ -15,8 +15,8 @@
    <!--Projects Section-->
    <section id="projects">
     <h3>Projects</h3>
-    <div class="ContentBoxes">
-      <p>Here's a brief description of some of the things I am working on! Links to each project are embedded.</p>
+    <section class="ContentBoxes">
+     <div>
       <p><strong>Long War:</strong> A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
       <div class="CollageImages">
         <img src="/Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
@@ -24,6 +24,12 @@
         <img src="/Assets/LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot of Long War project">
         <img src="/Assets/LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot of Long War project">        
       </div>
+    </div>
+   </section>
+   <section class="ContentBoxes">
+    <div>
+     <p><strong>Astrophotography:</strong></p>
+     A small project mostly to photograph space.
     </div>
   </section>
 <nav class="TabButtons">
