Syntaxing, New Content and Easter eggs

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -15,9 +15,12 @@
    <!--Projects Section-->
    <section id="projects">
     <h3>Projects</h3>
+    <p class="ContentBoxes">Down below is some of the things I am working on!<br>
+    This is in no way a comprehensive list but it's a start.
+    </p>
     <section class="ContentBoxes">
      <div>
-      <p><strong>Long War:</strong> A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
+      <p><strong>Long War: </strong>A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
       <div class="CollageImages">
         <img src="/Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
         <img src="/Assets/LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot of Long War project">
@@ -28,10 +31,14 @@
    </section>
    <section class="ContentBoxes">
     <div>
-     <p><strong>Astrophotography:</strong></p>
-     A small project mostly to photograph space.
+     <p><strong>Astrophotography: </strong>Interstellar Photography.</p>
     </div>
-  </section>
+   </section>
+   <section class="ContentBoxes">
+    <div>
+      <p><strong>Livestreaming: </strong><span class="strikethrough">Livestreaming on </span><em>Currently on indefinite hiatus. </em><span class="strikethrough">Come say Hi!</span></p>
+    </div>
+   </section>
 <nav class="TabButtons">
     <button onclick="history.back()">← Go Back</button>
 </nav>
