Added Easter Eggs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="ContentBoxes">
       <p>
         Hello! On a little more serious note,<br>
-        I'm an aspiring full-stack developer currently studying web development and software engineering.
+        I'm an aspiring full-stack developer named Saryn, currently studying web development and software engineering.
       </p>
       <p>
         I’m passionate about creating intuitive, interactive, and accessible user experiences.
@@ -43,7 +43,7 @@
         Eventually, I want to develop games and apps that others enjoy using as much as I enjoy making them.
         Outside of code, I love storytelling like Dungeons and Dragons, strategy games, and finding creative ways to solve problems.
       </p>
-      <p id="Omnisiah">Praise the Emperor.</p>
+      <p id="Omnisiah">⚙️ Praise the Omnisiah ⚙️</p>
     </div>
     <br>
     <h3>What is this?</h3>
@@ -54,7 +54,7 @@
       <p>If you stick around and find this entertaining than feel free to bookmark this page! The more company the merrier.</p>
     </div>
   </section>
-  <button>Click Me.</button>
+  <button id="uselessButton">Click Me.</button>
   <script src="script.js"></script>
 </body>
 </html>
