Organizing/Adding Projects

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -9,39 +9,50 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/../style.css">
 </head>
 <body>
+  <nav class="TabButtons">
+    <a href="/index.html">About Me</a>
+    <a href="/Resume/index.html">Resume</a>
+    <a href="#projects">Projects</a>
+   </nav>
+  <div class="Content">
    <!--Projects Section-->
    <section id="projects">
-    <h3>Projects</h3>
-    <p class="ContentBoxes">Down below is some of the things I am working on!<br>
-    This is in no way a comprehensive list but it's a start.
-    </p>
-    <section class="ContentBoxes">
-     <div>
-      <p><strong>Long War: </strong>A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
-      <div class="CollageImages">
-        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
-        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot of Long War project">
-        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot of Long War project">
-        <img src="/Assets/LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot of Long War project">        
-      </div>
+    <div class="contentBoxes">
+      <h3>Projects</h3>
+      <p class="ContentBoxes">Down below is some of the things I am working on!<br>
+        This is in no way a comprehensive list but it's a start.
+      </p>
+      <section class="ContentBoxes">
+        <p><strong>Long War: </strong>A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
+        <div class="CollageImages">
+          <img src="/Assets/LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot of Long War project">
+          <img src="/Assets/LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot of Long War project">
+          <img src="/Assets/LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot of Long War project">
+          <img src="/Assets/LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot of Long War project">        
+        </div>
+      </section>  
+      <section class="ContentBoxes">
+        <p><strong>Astrophotography: </strong>Interstellar Photography.</p>
+      </section>
+      <section class="ContentBoxes">
+        <p><strong>Livestreaming: </strong><span class="strikethrough">Livestreaming on </span><em>Currently on indefinite hiatus. </em><span class="strikethrough">Come say Hi!</span></p>
+      </section>
+      <section class="contentBoxes">
+        <p><strong>Heartfelt Crochet Creations: </strong>A small little website I am coding for a friend.</p>
+        <div class="CollageImages">
+          <img src="/Assets/heartfeltCrochetCreations/crochetSiteMainHeader.jpg" alt="Screenshot of Heartfelt Crochet Project">
+          <img src="/Assets/heartfeltCrochetCreations/crochetSiteMainPage.jpg" alt="Screenshot of Heartfelt Crochet Project">
+        </div>
+      </section>
     </div>
    </section>
-   <section class="ContentBoxes">
-    <div>
-     <p><strong>Astrophotography: </strong>Interstellar Photography.</p>
-    </div>
-   </section>
-   <section class="ContentBoxes">
-    <div>
-      <p><strong>Livestreaming: </strong><span class="strikethrough">Livestreaming on </span><em>Currently on indefinite hiatus. </em><span class="strikethrough">Come say Hi!</span></p>
-    </div>
-   </section>
+  </div>  
+  
 <nav class="TabButtons">
     <button onclick="history.back()">← Go Back</button>
 </nav>
-  
 </body>
 </html>
