--- a/Resume/index.html
+++ b/Resume/index.html
@@ -9,10 +9,16 @@
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
+        <nav class="TabButtons">
+            <a href="/index.html">About Me</a>
+            <a href="#resume">Resume</a>
+            <a href="/Projects/index.html">Projects</a>
+           </nav>
         <!-- Resume Section -->
         <section id="resume">
+        <div class="ContentBoxes">
+            <div>
             <h3>Resume</h3>
-            <div class="ContentBoxes">
                 <p>In this section, you can find an overview of my credentials and experience.<br>
                     For your convenience, a copy of my resume is available at the bottom if you're interested in learning more or discussing potential opportunities.
                 </p>
@@ -74,15 +80,15 @@
                 </ul>
             </div>
             <br>
-
-            <div>
+        </div>
+        <br>
                   <!-- Main content area for contact information -->
   <section id="contact" class="MainText">
-    <!-- Section heading -->
-    <h3>Contact Info</h3>
-
+    
     <!-- Contact instruction (fixed h5 closing tag) -->
     <div  class="ContentBoxes">
+        <!-- Section heading -->
+        <h3>Contact Info</h3>
         <p>Feel free to send me an email at Sarynharris2021@gmail.com</p>
         <p>Just leave your contact info here!</p>
        <!-- Contact form -->
