--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<!-- Main Header (Portfolio Name) styled with 'AccessText' class -->
-    <h1 class="AccessText">Saryn Harris Portfolio</h1>
-
-  <!-- Subtitle (Role/Profession) styled with 'AccessText' class -->
-  <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
-
-  <!-- Navigation bar for the website (tabs) -->
   <nav class="TabButtons">
    <a href="#aboutme">About Me</a>
    <a href="Resume/index.html">Resume</a>
    <a href="Projects/index.html">Projects</a>
   </nav>
-  <br>
-  <!--About Me Section-->
-  <section id="aboutme">
+  <div class="contentBoxes">
+    <h1 class="AccessText">Saryn Harris Portfolio</h1>
+    <div class="Content">
+      <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
+    </div>
+  </div>
+  <div class="contentBoxes"> 
+    <section id="aboutme">
     <h3>About Me</h3>
     <h4>Developer. Designer. Forever Learning</h4>
   
@@ -53,6 +51,7 @@
       </p>
       <p>If you stick around and find this entertaining than feel free to bookmark this page! The more company the merrier.</p>
     </div>
+  </div>
   </section>
   <button id="uselessButton">Click Me.</button>
   <script src="script.js"></script>
