--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Link to the external CSS file to apply styles -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="TabButtons">
@@ -17,7 +17,7 @@
    <a href="Resume/index.html">Resume</a>
    <a href="Projects/index.html">Projects</a>
   </nav>
-  <div class="contentBoxes">
+  <div class="ContentBoxes">
     <h1 class="AccessText">Saryn Harris Portfolio</h1>
     <div class="Content">
       <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
@@ -25,10 +25,9 @@
   </div>
   <div class="contentBoxes"> 
     <section id="aboutme">
-    <h3>About Me</h3>
-    <h4>Developer. Designer. Forever Learning</h4>
-  
     <div class="ContentBoxes">
+      <h3>About Me</h3>
+      <h4>Developer. Designer. Forever Learning</h4>
       <p>
         Hello! On a little more serious note,<br>
         I'm an aspiring full-stack developer named Saryn, currently studying web development and software engineering.
@@ -44,8 +43,8 @@
       <p id="Omnisiah">⚙️ Praise the Omnisiah ⚙️</p>
     </div>
     <br>
-    <h3>What is this?</h3>
     <div class="ContentBoxes">
+      <h3>What is this?</h3>
       <p>This site is mostly going to be used as a sudo-playground/portfolio for myself.<br>
       This is where I am going to keep all my projects, ideas, and just shenanigains for the time being while I learn full-stack development.
       </p>
