--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   </nav>
   <div class="ContentBoxes">
     <h1 class="AccessText">Saryn Harris Portfolio</h1>
-    <div class="Content">
-      <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
-    </div>
+    <img src="https://www.svgrepo.com/show/535312/cog.svg">
+    <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
   </div>
   <div class="contentBoxes"> 
     <section id="aboutme">
