--- a/Projects/index.html
+++ b/Projects/index.html
@@ -19,7 +19,7 @@
     <a href="#projects">Projects</a>
    </nav>
    <section id="projects">
-    <div class="contentBoxes">
+    <div class="ContentBoxes">
       <h3>Projects</h3>
       <p class="ContentBoxes">Down below is some of the things I am working on!<br>
         This is in no way a comprehensive list but it's a start.
@@ -39,7 +39,7 @@
       <section class="ContentBoxes">
         <p><strong>Livestreaming: </strong><span class="strikethrough">Livestreaming on </span><em>Currently on indefinite hiatus. </em><span class="strikethrough">Come say Hi!</span></p>
       </section>
-      <section class="contentBoxes">
+      <section class="ContentBoxes">
         <p><strong>Heartfelt Crochet Creations: </strong>A small little website I am coding for a friend.</p>
         <div class="CollageImages">
           <img src="/Assets/heartfeltCrochetCreations/crochetSiteMainHeader.jpg" alt="Screenshot of Heartfelt Crochet Project">
