--- a/index.html
+++ b/index.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- Title of the webpage displayed in the browser tab -->
   <title>Saryn's Portfolio</title>
 
-  <!-- Link to external font (Cinzel) for a Gothic feel -->
+  <!-- Gothic font styling -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
-  
-  <!-- Link to the external CSS file to apply styles -->
+
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="TabButtons">
-   <a href="#aboutme">About Me</a>
-   <a href="Resume/index.html">Resume</a>
-   <a href="Projects/index.html">Projects</a>
-  </nav>
-  <div class="ContentBoxes">
-    <h1 class="AccessText">Saryn Harris Portfolio</h1>
-    <img src="https://www.svgrepo.com/show/535312/cog.svg">
-    <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
-  </div>
-  <div class="contentBoxes"> 
-    <section id="aboutme">
+  <header>
+    <nav class="TabButtons" aria-label="Main navigation">
+      <a href="#aboutme">About Me</a>
+      <a href="Resume/index.html">Resume</a>
+      <a href="Projects/index.html">Projects</a>
+    </nav>
     <div class="ContentBoxes">
-      <h3>About Me</h3>
-      <h4>Developer. Designer. Forever Learning</h4>
-      <p>
-        Hello! On a little more serious note,<br>
-        I'm an aspiring full-stack developer named Saryn, currently studying web development and software engineering.
-      </p>
-      <p>
-        I’m passionate about creating intuitive, interactive, and accessible user experiences.
-        I enjoy building small projects to learn new things, whether it’s making buttons grow, tracking clicks, or experimenting with game logic.
-      </p>
-      <p>
-        Eventually, I want to develop games and apps that others enjoy using as much as I enjoy making them.
-        Outside of code, I love storytelling like Dungeons and Dragons, strategy games, and finding creative ways to solve problems.
-      </p>
-      <p id="Omnisiah">⚙️ Praise the Omnisiah ⚙️</p>
+      <h1 class="AccessText">Saryn Harris Portfolio</h1>
+      <img src="https://www.svgrepo.com/show/535312/cog.svg" alt="Cogwheel icon" />
+      <h2 class="AccessText">Aspirant Tech Priestess and Software Engineer</h2>
     </div>
-    <br>
-    <div class="ContentBoxes">
-      <h3>What is this?</h3>
-      <p>This site is mostly going to be used as a sudo-playground/portfolio for myself.<br>
-      This is where I am going to keep all my projects, ideas, and just shenanigains for the time being while I learn full-stack development.
-      </p>
-      <p>If you stick around and find this entertaining than feel free to bookmark this page! The more company the merrier.</p>
-    </div>
-  </div>
-  </section>
-  <button id="uselessButton">Click Me.</button>
+  </header>
+
+  <main>
+    <section id="aboutme" aria-labelledby="about-heading">
+      <article class="ContentBoxes">
+        <h3 id="about-heading">About Me</h3>
+        <h4>Developer. Designer. Forever Learning.</h4>
+        <p>
+          Hello! On a little more serious note,<br>
+          I'm an aspiring full-stack developer named Saryn, currently studying web development and software engineering.
+        </p>
+        <p>
+          I’m passionate about creating intuitive, interactive, and accessible user experiences.
+          I enjoy building small projects to learn new things—whether it’s making buttons grow, tracking clicks, or experimenting with game logic.
+        </p>
+        <p>
+          Eventually, I want to develop games and apps that others enjoy using as much as I enjoy making them.
+          Outside of code, I love storytelling like Dungeons and Dragons, strategy games, and finding creative ways to solve problems.
+        </p>
+        <p id="Omnisiah">⚙️ Praise the Omnisiah ⚙️</p>
+      </article>
+
+      <article class="ContentBoxes">
+        <h3>What is this?</h3>
+        <p>
+          This site is mostly going to be used as a pseudo-playground/portfolio for myself.<br>
+          It's where I’ll keep all my projects, ideas, and just general shenanigans while I learn full-stack development.
+        </p>
+        <p>
+          If you stick around and find this entertaining, feel free to bookmark the page. The more company, the merrier!
+        </p>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <button id="uselessButton">Click Me.</button>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
