--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <header>
     <nav class="TabButtons" aria-label="Main navigation">
-      <a href="#aboutme">About Me</a>
       <a href="Resume/index.html">Resume</a>
       <a href="Projects/index.html">Projects</a>
+      <a href="TagSpeak/TagSpeak.html">Tagspeak</a>
     </nav>
     <div class="ContentBoxes">
       <h1 class="AccessText">Saryn Harris Portfolio</h1>
@@ -57,7 +57,9 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="FooterBoxes">
+    <p>Site is created and maintained by Saryn Harris.</p>
+    <p>Most Recent Update:7/12/2025</p>
     <button id="uselessButton">Click Me.</button>
   </footer>
 
